--- a/public/404.html
+++ b/public/404.html
@@ -20,7 +20,7 @@
 
   
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@twitter_username" />
+  <meta name="twitter:site" content="@gohugoio" />
   <meta name="twitter:title" content="Hugo Blog (SEO Version)" />
   <meta name="twitter:description" content="Hugo is one of the most popular open-source static site generators. With its amazing speed and flexibility, Hugo makes building websites fun again." />
   <meta name="twitter:image" content="https://akkagao.github.io/img/avatar.jpg" />
