--- a/public/404.html
+++ b/public/404.html
@@ -23,14 +23,14 @@
   <meta name="twitter:site" content="@gohugoio" />
   <meta name="twitter:title" content="CrazyWolf‘s Blog" />
   <meta name="twitter:description" content="CrazyWolf&#39;s blog" />
-  <meta name="twitter:image" content="https://akkagao.github.io/img/avatar.jpg" />
+  <meta name="twitter:image" content="http://blog.crazywolf.cc/img/avatar.jpg" />
 
   
   <meta property="og:type" content="website" />
   <meta property="og:title" content="CrazyWolf‘s Blog" />
   <meta property="og:description" content="CrazyWolf&#39;s blog" />
   <meta property="og:url" content="" />
-  <meta property="og:image" content="https://akkagao.github.io/img/avatar.jpg" />
+  <meta property="og:image" content="http://blog.crazywolf.cc/img/avatar.jpg" />
 
 
 
@@ -39,7 +39,7 @@
 
 
 <link rel="canonical" href="" />
-<link rel="alternative" href="https://akkagao.github.io/index.xml" title="CrazyWolf - Blog" type="application/atom+xml" />
+<link rel="alternative" href="http://blog.crazywolf.cc/index.xml" title="CrazyWolf - Blog" type="application/atom+xml" />
 
 
 <meta name="renderer" content="webkit" />
@@ -64,18 +64,18 @@
 <meta name='msapplication-navbutton-color' content="#5fbf5e" />
 <meta name="msapplication-TileColor" content="#5fbf5e" />
 <meta name="msapplication-TileImage" content="/img/tile-image-windows.png" />
-<link rel="icon" href="https://akkagao.github.io/img/favicon.ico" />
-<link rel="icon" type="image/png" sizes="16x16" href="https://akkagao.github.io/img/favicon-16x16.png" />
-<link rel="icon" type="image/png" sizes="32x32" href="https://akkagao.github.io/img/favicon-32x32.png" />
-<link rel="icon" sizes="192x192" href="https://akkagao.github.io/img/touch-icon-android.png" />
-<link rel="apple-touch-icon" href="https://akkagao.github.io/img/touch-icon-apple.png" />
-<link rel="mask-icon" href="https://akkagao.github.io/img/safari-pinned-tab.svg" color="#5fbf5e" />
+<link rel="icon" href="http://blog.crazywolf.cc/img/favicon.ico" />
+<link rel="icon" type="image/png" sizes="16x16" href="http://blog.crazywolf.cc/img/favicon-16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="http://blog.crazywolf.cc/img/favicon-32x32.png" />
+<link rel="icon" sizes="192x192" href="http://blog.crazywolf.cc/img/touch-icon-android.png" />
+<link rel="apple-touch-icon" href="http://blog.crazywolf.cc/img/touch-icon-apple.png" />
+<link rel="mask-icon" href="http://blog.crazywolf.cc/img/safari-pinned-tab.svg" color="#5fbf5e" />
 
 
 
 <link rel="stylesheet" href="//cdn.bootcss.com/video.js/6.2.8/alt/video-js-cdn.min.css" />
 
-<link rel="stylesheet" href="https://akkagao.github.io/css/bundle.css" />
+<link rel="stylesheet" href="http://blog.crazywolf.cc/css/bundle.css" />
 
 
   
@@ -103,9 +103,9 @@
   <div class="not-found">
     <h1 class="error-emoji"></h1>
     <p class="error-text">/* 404 page not found. */</p>
-    <p class="error-link"><a href="https://akkagao.github.io/">↑ Back Home ↑</a></p>
+    <p class="error-link"><a href="http://blog.crazywolf.cc/">↑ Back Home ↑</a></p>
   </div>
-  <script src="https://akkagao.github.io/js/bundle.js"></script>
+  <script src="http://blog.crazywolf.cc/js/bundle.js"></script>
 
   </body>
 </html>
